Bug 1257826 - Fix Sort by Received for search db views. r=tobyp

When a message header is added to a threaded search db view, its thread is moved to the right place if the view is sorted by date and the message is the newest in that thread. The same happens if the sort order is changed, since the view is rebuilt in this case. Unfortunately this mechanism wasn't enabled when sorting by date received.

Differential Revision: https://phabricator.services.mozilla.com/D239246

--HG--
extra : moz-landing-system : lando